--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@spwashi/spw",
   "version": "0.0.1",
+  "description": "A parser and runtime for the Spw language",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "build:parser": "yarn build; node scripts/generate.js; yarn build",
+    "build:parser": "rm -rf dist; mkdir dist; yarn build; node scripts/generate.js; yarn build",
     "copypackage": "cp -rf package.json dist"
   },
   "repository": {
@@ -11,7 +13,17 @@
     "url": "git+https://github.com/spwashi/spw-js.git"
   },
   "dependencies": {
-    "@spwashi/language": "^1.2.13",
-    "minimist": "^1.2.5"
+    "@spwashi/language": "^1.3.0",
+    "@types/jest": "^26.0.20",
+    "@babel/core": "^7.12.16",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.16",
+    "@babel/plugin-proposal-private-methods": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-typescript": "^7.12.16",
+    "jest": "^26.6.3",
+    "minimist": "^1.2.5",
+    "typescript": "^4.1.5"
   }
 }
