--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,24 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "target": "ES2015",
+    "module": "commonjs",
+    "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "downlevelIteration": true
+    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist",
+    ".idea",
+    "scripts"
+  ],
+  "include": [
+    "src/**/*"
   ]
 }
