--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "build:parser": "yarn build; node scripts/generate.js; yarn build",
+    "test": "jest ./src/tests/integration/scope/scope.test.ts",
+    "build:parser": "node scripts/generate.js; yarn build; yarn test",
     "copypackage": "cp -rf package.json dist",
     "prepublish": "yarn run build:parser",
     "postpublish": "cd dist || true; cp -rf package.json ../"
@@ -15,8 +16,6 @@
     "url": "git+https://github.com/spwashi/spw-js.git"
   },
   "dependencies": {
-    "@spwashi/language": "^1.3.0",
-    "@types/jest": "^26.0.20",
     "@babel/core": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-proposal-optional-chaining": "^7.12.16",
@@ -24,8 +23,14 @@
     "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-typescript": "^7.12.16",
+    "@spwashi/language": "^1.3.0",
+    "@types/jest": "^26.0.20",
+    "dedent": "^0.7.0",
     "jest": "^26.6.3",
     "minimist": "^1.2.5",
     "typescript": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/dedent": "^0.7.0"
   }
 }
