--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "linkall": "yarn link @spwashi/language",
     "test": "jest src",
-    "prebuild": "yarn run build:parser",
+    "lint": "eslint src --ext .ts",
+    "prebuild": "yarn test; yarn lint; yarn run build:parser",
     "build": "tsc",
-    "postbuild": "yarn test",
     "build:parser": "ts-node -r tsconfig-paths/register src/tokenization/pegjs/scripts/generate.ts;",
     "copypackage": "cp -rf package.json dist",
     "prepublish": "yarn run build",
@@ -32,10 +32,13 @@
     "dedent": "^0.7.0",
     "jest": "^26.6.3",
     "minimist": "^1.2.5",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/dedent": "^0.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "eslint": "^7.23.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0"
   },
