--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "MIT",
   "scripts": {
     "linkall": "yarn link @spwashi/language",
-    "test": "jest ./",
+    "test": "jest ./dist",
     "lint": "eslint src --ext .ts --fix",
-    "tsc": "node ./node_modules/ttypescript/bin/tsc && ./node_modules/@babel/cli/bin/babel.js dist -d dist",
-    "prebuild": "yarn test && yarn run build:parser",
+    "tsc": "tsc",
+    "prebuild": "yarn run build:parser",
     "build": "yarn tsc",
     "build:parser": "ts-node -r tsconfig-paths/register src/parser/scripts/generate.ts;",
-    "preenter:dist": "yarn run lint",
+    "preenter:dist": "yarn run lint && yarn test",
     "enter:dist": "cp -rf package.json dist; cd dist",
     "prepare": "yarn run build",
     "postpublish": "cd dist || true; cp -rf package.json ../"
@@ -37,7 +37,6 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
     "@types/dedent": "^0.7.0",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
@@ -45,9 +44,9 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.23.0",
     "lodash": "^4.17.21",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "ttypescript": "^1.5.12",
     "typescript-transform-paths": "^2.2.3"
   },
   "jest": {
