--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "test": "jest ./dist",
     "lint": "eslint src --ext .ts --fix",
     "tsc": "tsc",
-    "prebuild": "yarn run build:parser",
     "build": "yarn tsc",
     "build:parser": "ts-node -r tsconfig-paths/register src/parser/scripts/generate.ts;",
-    "preenter:dist": "yarn run lint && yarn test",
-    "enter:dist": "cp -rf package.json dist; cd dist",
+    "precopypackage": "yarn run lint && yarn test",
+    "copypackage": "cp -rf package.json dist",
     "prepare": "yarn run build",
     "postpublish": "cd dist || true; cp -rf package.json ../"
   },
