--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "A parser and runtime for the Spw language",
   "license": "MIT",
   "scripts": {
-    "linkall": "yarn link @spwashi/language",
-    "test": "jest ./dist",
-    "lint": "eslint src --ext .ts --fix",
+    "src:test": "jest ./src",
+    "src:lint": "eslint src --ext .ts --fix",
+    "src:build:parser": "ts-node -r tsconfig-paths/register src/parser/scripts/generate.ts;",
+    "presrc:prepublish": "yarn run src:lint && yarn src:test",
+    "src:prepublish": "cp -rf package.json dist",
+    "prepare": "yarn run build",
     "tsc": "tsc",
     "build": "yarn tsc",
-    "build:parser": "ts-node -r tsconfig-paths/register src/parser/scripts/generate.ts;",
-    "precopypackage": "yarn run lint && yarn test",
-    "copypackage": "cp -rf package.json dist",
-    "prepare": "yarn run build",
     "postpublish": "cd dist || true; cp -rf package.json ../"
   },
   "repository": {
@@ -47,11 +46,5 @@
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript-transform-paths": "^2.2.3"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "@constructs/(.*)": "<rootDir>/src/constructs/$1",
-      "@grammar/(.*)": "<rootDir>/src/parser/grammar/$1"
-    }
   }
 }
