--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
     "@spwashi/language": "^1.4.4",
+    "@types/faker": "^5.5.5",
     "@types/jest": "^26.0.20",
     "dedent": "^0.7.0",
+    "faker": "^5.5.3",
     "jest": "^26.6.3",
     "minimist": "^1.2.5",
     "typescript": "^4.2.4"
