--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A parser and runtime for the Spw language",
   "license": "MIT",
   "scripts": {
-    "src:test": "yarn src:build:parser && yarn tsc &&  jest ./src",
+    "test": "jest ./src",
+    "src:unused-exports": "yarn ts-unused-exports tsconfig.json",
+    "src:test": "yarn src:build:parser && yarn tsc && jest ./src",
     "src:lint": "eslint src --ext .ts --fix",
     "src:build:parser": "ts-node -r tsconfig-paths/register src/parser/scripts/generate.ts;",
     "presrc:prepublish": "yarn run src:lint && yarn src:test",
@@ -30,16 +32,13 @@
     "@spwashi/language": "^1.4.4",
     "@types/faker": "^5.5.5",
     "@types/jest": "^26.0.20",
-    "dedent": "^0.7.0",
     "faker": "^5.5.3",
     "jest": "^26.6.3",
-    "minimist": "^1.2.5",
+    "ts-unused-exports": "^7.0.3",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
-    "@babel/preset-flow": "^7.13.13",
-    "@types/dedent": "^0.7.0",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
