--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@spwashi/language": "^1.4.4",
     "@types/faker": "^5.5.5",
     "@types/jest": "^26.0.20",
+    "@types/prettier": "^2.2.3",
+    "prettier": "^2.3.1",
     "faker": "^5.5.3",
     "jest": "^26.6.3",
     "ts-unused-exports": "^7.0.3",
