--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spwashi/spw",
-  "version": "0.1.7",
+  "version": "0.2.0-0",
   "description": "A parser and runtime for the Spw language",
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "tsc": "tsc",
     "prebuild": "yarn src:build:parser",
     "build": "node ./node_modules/ttypescript/bin/tsc && ./node_modules/@babel/cli/bin/babel.js dist -d dist",
+    "prepublish": "yarn build",
     "postpublish": "cd dist || true; cp -rf package.json ../",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "eslint-fix": "eslint --fix"
